Fixed grid alignment on preamble. Adjusted preamble polygon to fit like our style guide.

--- a/public_html/scss/style.scss
+++ b/public_html/scss/style.scss
@@ -172,26 +172,30 @@ header {
         & {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: auto auto auto auto;
+            grid-template-rows: auto auto auto;
         }
-        p {
-            grid-column: 2 / 4;
-        }
-        :nth-child(1) {
-            grid-row: 2 / 3;
+        h3 {
+            grid-area: 2 / 1 / span 1 / span 1;
             justify-self: center;
+        }        
+        :nth-child(2) {
+            grid-area: 1 / 2 / span 1 / span 2;
         }
+        :nth-child(3) {
+            grid-area: 2 / 2 / span 1 / span 2;
+        }
+        :nth-child(4) {
+            grid-area: 3 / 2 / span 1 / span 2;
+        }        
         &:before {
             content: "";
-            background-color: red;
-            width: 560%;
-            grid-row: 1/5;
-            -webkit-clip-path: polygon(100% -35%, 100% 135%, 0 50%);
-            clip-path: polygon(100% -35%, 100% 135%, 0 50%);
+            width: 160%;
+            grid-area: 1 / 1 / span 3 / span 3;
+           -webkit-clip-path: polygon(45% 0%, 100% 0, 100% 100%, 45% 100%, 0 50%);
+            clip-path: polygon(45% 0%, 100% 0, 100% 100%, 45% 100%, 0 50%);
             justify-self: center;
             opacity: 0.5;
             background-image: linear-gradient(90deg, #ffd762, #086fb8);
-
         }
     }
 }
